--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "google-maps-react": "^2.0.0",
     "mongoose": "^4.11.7"
   }
 }
