--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "money": "^0.2.0",
     "open-exchange-rates": "^0.3.0",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14"
