--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
+    "express-session": "^1.15.6",
     "google-maps-react": "^2.0.0",
     "mongoose": "^4.11.7",
+    "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
   }
 }
