--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   }
 }
