--- a/package.json
+++ b/package.json
@@ -20,10 +20,19 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
+    "express-session": "^1.15.6",
     "google-maps-react": "^2.0.0",
+    "method-override": "^2.3.10",
     "mongoose": "^4.11.7",
-    "passport": "^0.4.0"
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
