--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "auth0-js": "^9.4.2",
     "axios": "^0.16.2",
+    "bootstrap": "^4.1.0",
     "google-maps-react": "^2.0.0",
     "money": "^0.2.0",
     "open-exchange-rates": "^0.3.0",
