--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "open-exchange-rates": "^0.3.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-toggle": "^2.3.1",
     "react-dom": "^16.0.0",
     "react-moment": "^0.7.0",
     "react-router-dom": "^4.1.2",
