--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.0.0",
     "react-moment": "^0.7.0",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "sort-by-distance": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
