--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-moment": "^0.7.0",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14",
-    "sort-by-distance": "^1.0.0"
+    "sort-by-distance": "^1.0.0",
+    "sweetalert2-react": "^0.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
